--- a/static/css/index.css
+++ b/static/css/index.css
@@ -192,6 +192,10 @@ body {
     transition: var(--transition);
 }
 
+h2.title::after {
+  content: none !important;
+}
+
 .publication-authors a:hover::after {
     width: 100%;
 }
